# salonik

./: .gitignore  .hindent.yaml  .stylish-haskell.yaml  LICENSE  Makefile  Setup.hs  cabal.project  common.nix  default.nix  fetchNixpkgs.nix  hie.sh  nix-shell-persistent  shell.nix  sources.nix
haskell-overrides/: default.nix
prelude/: prelude.cabal
prelude/src/: Prelude.hs
salonik/: salonik.cabal
salonik/src/: Main.hs
salonik/src/Salonik/: Log.hs
salonik/src/Salonik/LEDStrip/: Main.hs  Protocol.hs
salonik/src/Salonik/LEDStrip/Client/: Main.hs
salonik/src/Salonik/MicroLecture/: Ex00.hs  Ex00.py  Ex01.hs
