name:                salonik
version:             0.1.0
homepage:            https://github.com/michalrus/salonik
license:             Apache-2.0
author:              Michal Rus
maintainer:          m@michalrus.com
copyright:           2017 Michal Rus
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable salonik
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -fwarn-incomplete-uni-patterns -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  DataKinds
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DuplicateRecordFields
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedLists
                     , OverloadedStrings
                     , PolyKinds
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
  other-modules:       Main
                     , Salonik.Log
  build-depends:       base-noprelude
                     , prelude
                     , containers
                     , memory
                     , time
                     , ansi-terminal
                     , bytestring
                     , connection
                     , fast-logger
                     , monad-loops
                     , transformers
                     , network
                     , optparse-applicative
                     , random
                     , regex-base
                     , regex-pcre
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michalrus/salonik
